Fixed Bugs in Main Page
There were some positioning bugs in main page, and some section were also not centered on bigger screens.

--- a/.css/bundle-rwd.css
+++ b/.css/bundle-rwd.css
@@ -1,6 +1,6 @@
 @media screen and (max-width:1980px) {
     .shopping-cards {
-        justify-content: center;
+        justify-content: flex-start;
         left: 50%;
         transform: translate(-50%);
         position: relative;
