--- a/.css/responsive.css
+++ b/.css/responsive.css
@@ -58,6 +58,24 @@
 }
 
 @media screen and (max-width: 950px) {
+    .flex-container {
+        transform: translateX(-50%);
+
+    }
+
+    .planet-refill {
+        width: 237px;
+    }
+
+    .display-block-900px {
+        display: block;
+    }
+
+    .positioning-div {
+        position: static;
+        width: auto;
+    }
+
 
     .nav-get-started-btn,
     .navbar-user-button,
@@ -68,7 +86,8 @@
     .display-none {
         display: none;
     }
-    .flex-item-2{
+
+    .flex-item-2 {
         position: absolute;
     }
 
@@ -427,6 +446,17 @@
 
     .flex-container {
         padding: 0 20px;
+        transform: translateX(-50%);
+
+    }
+
+    .planet-refill {
+        width: 150px;
+    }
+
+    .positioning-div {
+        position: static;
+        width: auto;
     }
 
     .qualities-section h1 {
@@ -484,7 +514,7 @@
     }
 
     .planet-heading {
-        font-size: 42px;
+        font-size: 42px !important;
         line-height: 48px;
     }
 
@@ -626,6 +656,13 @@
         gap: 5rem;
     }
 
+    .planet-heading {
+        font-size: 26px !important;
+        line-height: 35px;
+    }
+.planet-refill{
+    width: 98px;
+}
     .row-2 {
         order: -1;
     }
